--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,16 @@
 title: Miki Aso (Miki Ido)
-description: Master student in Seismology
-description: 1-711 Department of Earth and Planetary Science
-description: Graduate School of Science, The University of Tokyo
-description: miki.aso@eps.s.u-tokyo.ac.jp
-description: +81 03-5841-4652
+
+description: |
+Master student in Seismology
+1-711 Department of Earth and Planetary Science
+Graduate School of Science, The University of Tokyo
+
+emails:
+mainaddress: miki.aso@eps.s.u-tokyo.ac.jp
+subaddress: miki.seis.aso@gmail.com
+
+tel: +81 03-5841-4652
+
 google_analytics:
+
 theme: jekyll-theme-minimal
