--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,14 @@
 title: Miki Aso (Miki Ido)
 
-description: |
-Master student in Seismology
-1-711 Department of Earth and Planetary Science
-Graduate School of Science, The University of Tokyo
+description: Master student in Seismology
+
+company:
+- address: 1-711 Department of Earth and Planetary Science
+  name: Graduate School of Science, The University of Tokyo
 
 emails:
-mainaddress: miki.aso@eps.s.u-tokyo.ac.jp
-subaddress: miki.seis.aso@gmail.com
+- mainaddress: miki.aso@eps.s.u-tokyo.ac.jp
+  subaddress: miki.seis.aso@gmail.com
 
 tel: +81 03-5841-4652
 
