--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Miki Aso (Miki Ido)
 
-description: |+
+description: |
   Master student in Seismology  
   1-711 Department of Earth and Planetary Science  
   Graduate School of Science, The University of Tokyo  
