--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: Miki Aso (Miki Ido)
 
 description: |
-  Master student in Seismology  
-  1-711 Department of Earth and Planetary Science  
-  Graduate School of Science, The University of Tokyo  
+  "Master student in Seismology"  
+  "1-711 Department of Earth and Planetary Science" 
+  "Graduate School of Science, The University of Tokyo"  
 
 
   miki.aso@eps.s.u-tokyo.ac.jp  
