--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 title: Miki Aso (Miki Ido)
 
-description: |
-  "test"
-  "Master student in Seismology"  
-  "1-711 Department of Earth and Planetary Science" 
-  "Graduate School of Science, The University of Tokyo"  
+description_html:
+  test<br>
+  Master student in Seismology<br>
+  1-711 Department of Earth and Planetary Science<br> 
+  Graduate School of Science, The University of Tokyo<br>  
 
 
   miki.aso@eps.s.u-tokyo.ac.jp  
