--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Miki Aso (Miki Ido)
 
-description_html:
+description:
   test<br>
   Master student in Seismology<br>
   1-711 Department of Earth and Planetary Science<br> 
