--- a/_config.yaml
+++ b/_config.yaml
@@ -1,7 +1,7 @@
 title: Miki Aso (Miki Ido)
 
 description:
-  Master student in Seismology<br>
+  Master student in Seismology
   <br>  
   1-711 Department of Earth and Planetary Science<br> 
   Graduate School of Science<br>
