--- a/_config.yaml
+++ b/_config.yaml
@@ -1,6 +1,7 @@
 title: Miki Aso (Miki Ido)
 
 description:
+  test
   Master student in Seismology
   <br>  
   1-711 Department of Earth and Planetary Science<br> 
@@ -10,6 +11,7 @@ description:
   miki.aso@eps.s.u-tokyo.ac.jp<br>    
   +81 03-5841-4652<br>   
 
+test: test
 #google_analytics:
 
 theme: jekyll-theme-minimal
