--- a/_config.yaml
+++ b/_config.yaml
@@ -1,9 +1,9 @@
 title: Miki Aso (Miki Ido)
 
-description:
-  test
+description: |
+  test2
   Master student in Seismology
-  <br>  
+  
   1-711 Department of Earth and Planetary Science<br> 
   Graduate School of Science<br>
   The University of Tokyo<br>  
