--- a/_config.yaml
+++ b/_config.yaml
@@ -1,9 +1,8 @@
 title: Miki Aso (Miki Ido)
 
-description: |
-  test2
-  Master student in Seismology
-  
+description: 
+  Master student in Seismology<br> 
+  <br> 
   1-711 Department of Earth and Planetary Science<br> 
   Graduate School of Science<br>
   The University of Tokyo<br>  
@@ -11,7 +10,6 @@ description: |
   miki.aso@eps.s.u-tokyo.ac.jp<br>    
   +81 03-5841-4652<br>   
 
-test: test
 #google_analytics:
 
 theme: jekyll-theme-minimal
